.provarCaches/00D1q0000008b5bEAA/objects/xcdhcm__Change_Request__c.object
<CustomObject>
    <fields>
        <fullName>xcdhcm__Build_approach__c</fullName>
        <label>Build approach</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Config</fullName>
                </value>
                <value>
                    <fullName>Code</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xcdhcm__Business_consultant_actual_effort_hrs__c</fullName>
        <label>Business consultant actual effort (hrs)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Business_consultant_effort_req_hrs__c</fullName>
        <label>Business consultant effort req. (hrs)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Business_consultant_effort_to_date_hrs__c</fullName>
        <label>Business consultant effort to date (hrs)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Business_consultant_email__c</fullName>
        <label>Business consultant email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Business_requirement__c</fullName>
        <inlineHelpText>Please describe the requirement that is driving this change request, including the benefit(s) the business is hoping to achieve</inlineHelpText>
        <label>Business requirement</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Client_approver_email__c</fullName>
        <label>Client approver email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Further_change_details__c</fullName>
        <label>Further change details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Implementation_approach__c</fullName>
        <label>Implementation approach</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low risk - configure directly into live</fullName>
                </value>
                <value>
                    <fullName>Medium/high risk - UAT in sandbox</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xcdhcm__Live_timescale__c</fullName>
        <label>Live timescale</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Module__c</fullName>
        <label>Module</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>XCD HRMS</fullName>
                </value>
                <value>
                    <fullName>XCD Payroll</fullName>
                </value>
                <value>
                    <fullName>XCD Recruitment</fullName>
                </value>
                <value>
                    <fullName>XCD Learning</fullName>
                </value>
                <value>
                    <fullName>XCD Documents</fullName>
                </value>
                <value>
                    <fullName>XCD Expenses</fullName>
                </value>
                <value>
                    <fullName>XCD Performance Management</fullName>
                </value>
                <value>
                    <fullName>XCD Timesheets</fullName>
                </value>
                <value>
                    <fullName>XCD Overtime</fullName>
                </value>
                <value>
                    <fullName>XCD Gross Payroll</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xcdhcm__Name__c</fullName>
        <label>Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Notes_for_release__c</fullName>
        <label>Notes for release</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Outline_solution_approach__c</fullName>
        <label>Outline solution approach</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Potential_to_impact_upgrades__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Potential to impact upgrades?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 - must have</fullName>
                </value>
                <value>
                    <fullName>2 - should have</fullName>
                </value>
                <value>
                    <fullName>3 - could have</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xcdhcm__Signed_off_by__c</fullName>
        <inlineHelpText>Please record the person who agreed to this work (client-side)</inlineHelpText>
        <label>Signed off by</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Estimated by XCD</fullName>
                </value>
                <value>
                    <fullName>Estimate Approved</fullName>
                </value>
                <value>
                    <fullName>Estimate Rejected</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>No longer required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xcdhcm__Test_consultant_actual_effort_hrs__c</fullName>
        <label>Test consultant actual effort (hrs)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Test_consultant_effort_required_hrs__c</fullName>
        <label>Test consultant effort required (hrs)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Test_consultant_effort_to_date_hrs__c</fullName>
        <label>Test consultant effort to date (hrs)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Test_consultant_email__c</fullName>
        <label>Test consultant email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Test_plan_approach__c</fullName>
        <label>Test plan approach</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Test_plan_expected_results__c</fullName>
        <label>Test plan expected results</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Testing_timescale__c</fullName>
        <label>Testing timescale</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Timescale_notes__c</fullName>
        <label>Timescale notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Total_actual_effort_hrs__c</fullName>
        <formula>xcdhcm__Business_consultant_actual_effort_hrs__c + xcdhcm__Test_consultant_actual_effort_hrs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total actual effort (hrs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Total_effort_estimate_hrs__c</fullName>
        <formula>xcdhcm__Business_consultant_effort_to_date_hrs__c + xcdhcm__Test_consultant_effort_to_date_hrs__c + xcdhcm__Business_consultant_effort_req_hrs__c + xcdhcm__Test_consultant_effort_required_hrs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total effort estimate (hrs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Type_of_request__c</fullName>
        <label>Type of request</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Change to existing functionality</fullName>
                </value>
                <value>
                    <fullName>Brand new functionality required</fullName>
                </value>
                <value>
                    <fullName>An idea for exploring in the UAT environment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xcdhcm__Work_completed_by__c</fullName>
        <inlineHelpText>Please record the person who completed the work</inlineHelpText>
        <label>Work completed by</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Change Request</label>
    <listViews>
        <fullName>xcdhcm__All</fullName>
        <columns>NAME</columns>
        <columns>xcdhcm__Name__c</columns>
        <columns>xcdhcm__Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>xcdhcm__Signed_off_by__c</columns>
        <columns>xcdhcm__Work_completed_by__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CR-{0000}</displayFormat>
        <label>CR Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Change Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>